--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "emoji-mart": "^5.6.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
